# flask-celery-flower

./: .gitignore  README.md  dump.rdb  pyproject.toml
src/: app.py  make_celery.py  tasks.py
src/static/: style.css
src/templates/: home.html
