[tool.poetry]
name = "celery-flask-flower"
version = "0.1.0"
description = "Basic Celery + Flask + Flower Integration"
authors = ["Hassan Ali"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "3.0.2"
celery = "^5.3.0"
flower = "2.0.1"
redis = "4.4.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"